Using JDK 11 in CircleCI pipeline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,9 @@ version: 2.1
 orbs:
   maven: circleci/maven@0.0.12
 
+docker:
+  - image: circleci/openjdk:11-jdk-stretch
+
 workflows:
   maven_test:
     jobs:
